--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "nuxt": "^3.6.5"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.0.18",
+    "@nuxtjs/supabase": "^0.3.8",
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "daisyui": "^3.4.0",
     "openai": "^3.3.0"
   }
 }
