--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.18",
+    "@nuxtjs/composition-api": "^0.33.1",
     "@nuxtjs/supabase": "^0.3.8",
     "@nuxtjs/tailwindcss": "^6.8.0",
+    "@pinia/nuxt": "^0.4.11",
     "daisyui": "^3.4.0",
-    "openai": "^3.3.0"
+    "openai": "^3.3.0",
+    "pinia": "^2.1.4"
   }
 }
